[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyairtable-common"
version = "1.0.0"
description = "Shared Python library for PyAirtable microservices"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "PyAirtable Team", email = "team@pyairtable.example.com"},
]
keywords = ["airtable", "microservices", "common", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.10.3",
    "pydantic-settings>=2.0",
    "fastapi>=0.115.5",
    "httpx>=0.28.1",
    "structlog>=24.1.0",
    "prometheus-client>=0.21.0",
    "sqlalchemy>=2.0",
    "redis>=5.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
    "black>=24.10.0",
    "isort>=5.13.2",
]

[project.urls]
"Homepage" = "https://github.com/Reg-Kris/pyairtable-common"
"Bug Reports" = "https://github.com/Reg-Kris/pyairtable-common/issues"
"Source" = "https://github.com/Reg-Kris/pyairtable-common"

[tool.setuptools.packages.find]
include = ["pyairtable_common*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "PT", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88